# cuda-analyzer

./: .gitignore  README.md  benchmark.py  kernel.cu  pyproject.toml
backend/: visualize_logs.py
backend/agent/: graph.py  invoke.py  nodes.py  schemas.py  state.py  visualize_graph.py
backend/api/: server.py
backend/logs/: agent_execution.jsonl
backend/prompts/: architect_system.md  critic_system.md  cuda_analysis_system.md  cuda_analysis_user.md  engineer_system.md  init_copy_system.md  report_system.md  visualize_system.md
backend/utils/: Dockerfile  docker_executor.py  logger.py  parser.py  prompts_manager.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
